# Rust-fundamentals

./: README.md  doc.txt  hello.rs
advancedfnclosures/: Cargo.toml
advancedfnclosures/src/: main.rs
collections/src/: main.rs
concurrency/channels/src/: main.rs
concurrency/sharedstateconcurency/: Cargo.toml
concurrency/sharedstateconcurency/src/: main.rs
concurrency/src/: main.rs
cratelib/: Cargo.toml
cratelib/src/: financial.rs  lib.rs
datatypes/src/: main.rs
documentation/src/: main.rs
enumeration/src/: main.rs
error_handling/src/: main.rs
flowcontrol/src/: main.rs
functionalrust/: Cargo.toml
functionalrust/src/: main.rs
functionrust/: Cargo.toml
functions/src/: main.rs
generics/src/: main.rs
generics/traits/: Cargo.toml
guessing_game/src/: main.rs
macros/src/: main.rs
matchcontrolflow/src/: main.rs
matchtest/: Cargo.toml  app.js  hello.ts
matchtest/src/: main.rs
method_syntax/src/: main.rs
modules/src/: main.rs
oop/src/: main.rs
ownership/src/: main.rs
package/src/: main.rs
patternmatching/src/: main.rs
pointers/src/: main.rs
proj1/minigrepv1/: Cargo.toml
proj1/minigrepv2/: Cargo.toml  poem.txt
proj2/hello/: app.js  index.html  style.css
slice/src/: main.rs
smartpointers/src/: main.rs
structure/src/: main.rs
tests/src/: main.rs
variables/src/: main.rs
workspaces/: Cargo.toml  workspace.txt
workspaces/lib/add_two/: Cargo.toml
workspaces/lib/add_two/src/: lib.rs
workspaces/lib/square/src/: lib.rs
workspaces/tests/test1/: Cargo.toml
workspaces/tests/test1/src/: lib.rs
(+16 files in other folders)
