[package]
name = "test1"
edition = "2021"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
square = { path="../../lib/square" }
add_two = { path="../../lib/add_two" }
